# nanogenmo-2023

./: .gitignore  Cargo.toml  README.md  il-nome-della-zebra.txt  output.txt
data/: age.txt  attributes.ideas.txt  attributes.txt  hours.txt  location.txt  name.txt  saint.txt  town.txt
data/sources/: wikipedia-saints.csv
src/: import.rs  main.rs  text.rs
