[package]
name = "zebra"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/import.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.11.0"
petgraph = "0.6.4"
rand = "0.8.5"
rand_seeder = "0.2.3"
